Estructuración y configuración inicial

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "club.nuvarmy.fitness4home",
+	"appId": "io.ionic.starter",
 	"appName": "fitness4home",
 	"webDir": "www",
 	"bundledWebRuntime": false
