--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
@@ -26,7 +27,15 @@
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
+    "@ionic-native/camera": "^5.34.0",
+    "@ionic-native/core": "^5.34.0",
+    "@ionic-native/google-plus": "^5.34.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-camera": "^5.0.2",
+    "cordova-plugin-googleplus": "^8.5.2",
+    "firebase": "^8.8.0",
+    "globalthis": "^1.0.2",
+    "jetifier": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
