feat: Unión de subscripción y catálogo de música al tabs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,11 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@shared/*": ["src/app/shared/*"],
+      "@subscription/*": ["src/app/pages/subscription/*"],
+      "@external-services/*": ["src/app/pages/external-services/*"]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
