--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@ionic-native/camera": "^5.34.0",
     "@ionic-native/core": "^5.34.0",
     "@ionic-native/google-plus": "^5.34.0",
+    "@ionic-native/zoom": "^5.35.0",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-camera": "^5.0.2",
     "cordova-plugin-googleplus": "^8.5.2",
+    "cordova.plugin.zoom": "^4.6.2166-6.603",
     "firebase": "^8.8.0",
     "globalthis": "^1.0.2",
     "jetifier": "^2.0.0",
