--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
@@ -32,6 +33,7 @@
     "@ionic-native/google-plus": "^5.34.0",
     "@ionic-native/zoom": "^5.35.0",
     "@ionic/angular": "^5.5.2",
+    "@types/googlemaps": "^3.39.12",
     "cordova-plugin-camera": "^5.0.2",
     "cordova-plugin-googleplus": "^8.5.2",
     "cordova.plugin.zoom": "^4.6.2166-6.603",
