--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@shared/*": ["src/app/shared/*"],
       "@subscription/*": ["src/app/pages/subscription/*"],
       "@external-services/*": ["src/app/pages/external-services/*"],
-      "@auth-app/*": ["src/app/pages/auth/*"]
+      "@auth-app/*": ["src/app/pages/auth/*"],
+      "@social/*": ["src/app/pages/social/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
